<resources>
    <string name="app_name">PizzaApp</string>

    <string name="start_order">Start Order</string>
    <string name="about_us">About Us</string>
    <string name="order_pizza">Order Pizza</string>

    <string name="menu">Menu</string>
    <string name="choose_pizza">Enter Pizza Name</string>

    <string name="set_quantity">Set Quantity:</string>
    <string name="choose_size">Choose Size:</string>
    <string name="small">Small(radius 20 sm)</string>
    <string name="medium">Medium(radius 40 sm)</string>
    <string name="big">Big(radius 60 sm)</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cancel_order">Cansel Order</string>
    <string name="send_order">Send Order</string>
    <string name="subtotal">Subtotal: 5.00</string>

    <string name="extra_fillings">Extra Fillings</string>
    <string name="cheeses">Cheeses</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="feta">Feta</string>
    <string name="sologuni">Sologuni</string>
    <string name="fruits_and_vegetables">Fruits And Vegetables</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="corn">Corn</string>
    <string name="cucumbers">Cucumber</string>
    <string name="Corn">Corn</string>
    <string name="lettuce">Lettuce</string>
    <string name="pineapple">Pineapple</string>
    <string name="peach">Peach</string>
    <string name="meat">Meat</string>
    <string name="salami">Salami</string>
    <string name="sausage">Sausage</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="fish">Fish</string>
    <string name="salmon">Salmon</string>
    <string name="tuna">Tuna</string>

    <string name="pickup_date">Pickup Date</string>

    <string name="user_information">User Information</string>
    <string name="user_name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="user_email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="user_address">Address</string>
    <string name="enter_your_address">Enter Your address</string>

    <string name="summary_of_order">Summary Of Order</string>
    <string name="total">Total: 20.00</string>
</resources>