<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/user_information_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_information"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"/>

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_your_name"/>

            <TextView
                android:id="@+id/user_email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_email"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_your_email"/>

            <TextView
                android:id="@+id/user_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_address"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_address_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_your_address"/>

            <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_order" />
        </LinearLayout>
    </ScrollView>
</layout>