<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context = ".StartFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                android:scaleType="center"
                android:src="@drawable/pizza"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/order_pizza"
                android:textColor="#5C00FF"
                android:textAppearance="?attr/textAppearanceHeadline4"/>

            <Button
                android:id="@+id/start_order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_order"/>

            <Button
                android:id="@+id/about_us_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </ScrollView>



</layout>
