<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PickupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/pickup_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickup_date"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textAlignment="center"/>

            <RadioGroup
                android:id="@+id/options_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option0_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Monday"/>

                <RadioButton
                    android:id="@+id/option1_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Tuesday"/>

                <RadioButton
                    android:id="@+id/option2_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Wednesday"/>

                <RadioButton
                    android:id="@+id/option3_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Thursday"/>

                <RadioButton
                    android:id="@+id/option4_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Friday"/>
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.PizzaApp.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/subtotal_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/subtotal"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_order" />

        </LinearLayout>
    </ScrollView>
</layout>