<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_of_order"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/user_information_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Name: Yurii \n Email: yuraHabor@gmail.com \n Address: Lviv, Vidkryta 1"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <TextView
                android:id="@+id/pizza_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Pizza: Peperoni"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Quantity: 10"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <TextView
                android:id="@+id/size_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Size: Medium"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <TextView
                android:id="@+id/extra_fillings_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Extra Fillings: Mozzarella"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <TextView
                android:id="@+id/pickup_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Date: Friday"
                android:textAppearance="?attr/textAppearanceBodyMedium"/>

            <View
                android:id="@+id/divider"
                style="@style/Widget.PizzaApp.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/total"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/send_order"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_order" />
        </LinearLayout>
    </ScrollView>
</layout>